<resources>
    <string name="app_name">Personal Trainer</string>

    <string name="str_btnModuloCliente">Cliente</string>
    <string name="str_btnModuloCatalogo">Catalogo</string>
    <string name="str_btnModuloRutina">Rutina</string>

    <string name="str_btnAgregarObjetivo">Agregar objetivo</string>
    <string name="str_listarObjetivo">lista objetivo</string>
    <string name="str_btnActualizarObjetivo">Actualizar </string>
    <string name="str_btnEliminarObjetivo">Eliminar</string>"

    <string name="str_btnGuardarCliente">Guardar</string>
    <string name="str_listarCliente">listar</string>
    <string name="str_btnActualizarCliente">Actualizar </string>
    <string name="str_btnEliminarCliente">Eliminar</string>

    <string name="str_btnGuardarCategotia">Guardar</string>
    <string name="str_listarCategoria">listar</string>
    <string name="str_btnActualizarCategoria">Actualizar </string>
    <string name="str_btnEliminarCategoria">Eliminar</string>

    <string name="str_btnGuardarEjercicio">Guardar</string>
    <string name="str_listarEjercicio">listar</string>
    <string name="str_btnActualizarEjercicio">Actualizar </string>
    <string name="str_btnEliminarEjercicio">Eliminar</string>
</resources>